examples/high-quality-code/coupling/coupling-types/bad/object-parameter/b-module.mjs
export class Shape {
  #width;
  #height;

  constructor(width, height) {
    this.#width = width;
    this.#height = height;
  }

  get width() {
    return this.#width;
  }

  get height() {
    return this.#height;
  }
}
